<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textview1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="20dp"
        android:text="@string/search_grades"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textview2"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:text="@string/search_by"
        android:gravity="center"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_below="@id/textview1"
        />

    <RadioGroup
        android:id="@+id/radiogroup1"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_below="@id/textview1"
        android:layout_alignParentRight="true"
        android:layout_toEndOf="@+id/textview2"
        android:layout_toRightOf="@+id/textview2"
        android:orientation="horizontal"
        >

        <RadioButton
            android:id="@+id/radioButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/id"
            />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/program_code"
            />

    </RadioGroup>

    <TextView
        android:id="@+id/textview3"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_below="@id/textview2"
        android:gravity="center"
        android:text="@string/id_number"
        android:textStyle="bold"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/edittext1"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_below="@id/radiogroup1"
        android:layout_alignParentRight="true"
        android:layout_toEndOf="@+id/textview3"
        android:layout_toRightOf="@+id/textview3"
        android:gravity="center"
        android:hint="@string/enter_id_number"
        android:inputType="number"
        android:textSize="15sp"
        />

    <Button
        android:id="@+id/idButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_button"
        android:layout_marginTop="190dp"
        android:layout_marginLeft="160dp"
        />

    <TextView
        android:id="@+id/textview4"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:text="@string/enter_program_code"
        android:gravity="center"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_below="@id/textview2"
        />

    <ListView
        android:id="@+id/listview"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_below="@id/radiogroup1"
        android:layout_alignParentRight="true"
        android:layout_toEndOf="@+id/textview4"
        android:layout_toRightOf="@+id/textview4"
        android:layout_weight="1"
        android:divider="@color/black"
        android:dividerHeight="2dp" />

    <Button
        android:id="@+id/codeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_button"
        android:layout_marginTop="190dp"
        android:layout_marginLeft="160dp"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="250dp"
        />

</RelativeLayout>